[package]
name = "layer0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.4"
rust-crypto = "0.2.36"
serde = "*"
serde_json = "*"
serde_derive = "*"
json = "0.12.4"
chrono = "0.4.22"
colored = "2.0.0"
lazy_static = "1.4.0"